--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><a href="#"><img src="./images/coding.jpg" alt="Людина за комп'ютером створює програмний код"
-                            width="370"></a></li>
-                <li><a href="#"><img src="./images/mobile.jpg"
-                            alt="Людина за комп'ютером займається тестуванням мобiльних додаткiв" width="370"></a></li>
-                <li><a href="#"><img src="./images/design.jpg" alt="Дизайнер обирає кольори для макету" width="370"></a></li>
+                <li><img src="./images/coding.jpg" alt="Людина за комп'ютером створює програмний код"
+                            width="370"></li>
+                <li><img src="./images/mobile.jpg"
+                            alt="Людина за комп'ютером займається тестуванням мобiльних додаткiв" width="370"></li>
+                <li><img src="./images/design.jpg" alt="Дизайнер обирає кольори для макету" width="370"></li>
             </ul>
         </section>
         <section>
